Added: -[Factories] created factories for authors, books and readers which keeps track of highest id
Fixed:
-[Search] made author name search case-insensitive