@@ -5,15 +5,15 @@ import com.pszumanski.libraryregister.data.Author;
 import com.pszumanski.libraryregister.data.Book;
 import com.pszumanski.libraryregister.data.Reader;
 import com.pszumanski.libraryregister.managers.dataManagers.*;
+import com.pszumanski.libraryregister.managers.inputManagers.factories.AuthorFactory;
+import com.pszumanski.libraryregister.managers.inputManagers.factories.AuthorFactoryService;
 import com.pszumanski.libraryregister.repositories.AuthorRepository;
 import com.pszumanski.libraryregister.repositories.BookRepository;
 import com.pszumanski.libraryregister.repositories.ReaderRepository;
 import com.pszumanski.libraryregister.strategy.authorSearch.AuthorFindById;
 import com.pszumanski.libraryregister.strategy.authorSearch.AuthorFindByName;
 import com.pszumanski.libraryregister.strategy.bookSearch.BookFindById;
-import com.pszumanski.libraryregister.strategy.bookSearch.BookSearch;
 import com.pszumanski.libraryregister.strategy.readerSearch.ReaderFindById;
-import com.pszumanski.libraryregister.strategy.readerSearch.ReaderSearch;
 import javafx.application.Application;
 import javafx.stage.Stage;
 import lombok.extern.slf4j.Slf4j;
@@ -23,6 +23,8 @@ import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.boot.autoconfigure.domain.EntityScan;
 import org.springframework.context.annotation.Bean;
 import org.springframework.data.jpa.repository.config.EnableJpaRepositories;
+
+import java.util.Map;
 
 @SpringBootApplication(scanBasePackages = "com.pszumanski.libraryregister")
 @EntityScan("com.pszumanski.libraryregister.data")
@@ -71,18 +73,18 @@ public class LibraryRegisterApplication extends SpringJavaFXApplication {
 //                    "Wrocław", "maciek@gmail.com", 123));
 
             authorManager.setSearch(new AuthorFindByName());
-            Author author = authorManager.search("David David").get(0);
+            Author author = authorManager.search("David daVId").get(0);
             log.info("Result of search 'David David': " + author.toString());
 
             readerManager.setSearch(new ReaderFindById());
-            Reader reader = readerManager.search("1").get(0);
+            Reader reader = readerManager.search("1").getFirst();
             log.info("Result of search reader id=1: " + reader.toString());
 
 
             boookManager.setSearch(new BookFindById());
-            Book book = boookManager.search("1").get(0);
+            Book book = boookManager.search("1").getFirst();
             book.setCurrentReaderId(reader.getId());
-            log.info("Result of search book id=1: " + book.toString());
+            log.info("Result of search book id=1: " + book);
 
             log.info("Fetched books of reader: " + reader.getName() + ": " + readerManager.fetchBooks(reader).toString());
 
@@ -90,8 +92,13 @@ public class LibraryRegisterApplication extends SpringJavaFXApplication {
             author = authorManager.search("602").get(0);
             log.info("Fethced books titles of author: " + author.getName() + ":" + authorManager.fetchTitles(author).toString());
 
-//            fileManager.saveDatabase();
-//            log.info("Database saved");
+            AuthorFactoryService authorFactory = new AuthorFactory(authorManager);
+            author = authorFactory.create(Map.of("name", "Charmander", "bornDate", "2115", "deathDate", "2225"));
+            log.info(author.toString());
+            authorManager.add(author);
+
+            fileManager.saveDatabase();
+            log.info("Database saved");
         };
     }
 
